fix(layout): fix layout shift on page load
Use css media queries to show mobile or desktop layout instead of breakpoint observable to fix layout shift on page load.

--- a/src/app/core/layout/navigation/navigation.component.sass
+++ b/src/app/core/layout/navigation/navigation.component.sass
@@ -1,3 +1,9 @@
+.toolbar-mobile
+  display: flex
+
+.toolbar-desktop
+  display: none
+
 .sidenav-container 
   height: 100%
 
@@ -22,4 +28,12 @@
 
 // .logo 
 //   font-size: 1.3rem
+
+@media (min-width: 768px)
+  .toolbar-mobile
+    display: none
+    
+  .toolbar-desktop
+    display: flex
+
 
